Baner & About Us

--- a/Index.html
+++ b/Index.html
@@ -145,20 +145,36 @@
                         <div class="profile-text padding-right-yes">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h2 class="section-title uppercase">Hello, My Name is Berg.</h2>
+                                    <h2 class="section-title uppercase">¿ Que es DARP ?</h2>
 
                                     <p>
-                                        Nick Berg, 28 years young, born and grew up in Water Seven, Grand Line. Highly motivated creative developer with international client portfolio.
+                                       DARP es una empresa mexicana conformada por un grupo de
+consultores con alta experiencia y capacidad en soluciones
+integrales , soluciones de negocio y servicios de soporte en el
+campo de la TI, DARP ofrece consultoría en la definición,
+análisis, diseño e implementación de soluciones.
                                     </p>
 
                                     <span class="divider"></span>
 
                                     <p class="text-grey">
-                                        I currently work at Galley-La Company, where I spend most of my time crafting and working on awesome projects.
+                                          Desarrollamos soluciones a tus
+proyectos, tanto empresariales
+c o m o p e r s o n a l e s , t e
+ofrecemos asesoría gratuita,
+p i d e t u c o t i z a c i ó n c o n
+nosotros sin ningún costo, nos
+basamos en las mejores
+metodologías y las mejores
+tecnologías de desarrollo.
                                     </p>
 
                                     <p class="text-grey">
-                                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+                                   DARP lleva las herramientas de solución por un proceso en el
+cual se analiza, diseña e implementa para lograr cumplir con
+los objetivos basados en las mejores practicas, buscando
+innovar con la mas alta tecnología, adaptándonos al mundo y
+su avance.
                                     </p>
                                 </div>
                                 <!-- //.col-md-12 -->
