--- a/Index.html
+++ b/Index.html
@@ -103,7 +103,7 @@
                     </li>
                     
                     <li class="page-scroll">
-                        <a href="#portfolio">Portafolio/a>
+                        <a href="#portfolio">Portafolio</a>
                     </li>
                     
                     <li class="page-scroll">
