Actualización de tecnologias
se agrego mas contenido

--- a/Index.html
+++ b/Index.html
@@ -751,7 +751,7 @@
 
                             <div class="resume-item">
                                 <div class="resume-year">
-                                    <span class="resume-year">2005 - 2008</span>
+                                    <span class="resume-year">ERP</span>
                                 </div>
                                 <!-- //.resume-year -->
 
@@ -763,16 +763,17 @@
                                 <div class="panel">
                                     <div class="panel-heading">
                                         <div class="panel-title">
-                                            <h4 class="resume-title">Inteligencia de Negocios (BI)</h4>
+                                            <h4 class="resume-title">Sistemas de Planificación de Recursos Gerenciales</h4>
                                         </div>
                                         <!-- //.panel-title -->
                                     </div>
                                     <!-- //.panel-heading -->
 
-                                    <div id="education2" class="panel-collapse collapse">
+                                    <div id="education2" class="panel-collapse collapse in">
                                         <div class="panel-body text-grey">
                                             <p>
-                                                DARP conoce los factores estratégicos, así como las problemáticas de negocio, conociendo la información privilegiada y creando conocimiento a travez del flujo de datos. desarrollando herramientas de información, predicción de datos, y reportes de los mismos, optimización de procesos para una mejor toma de decisiones en los negocios. 
+                                            Sistemas de información gerenciales que integran y manejan muchos de los negocios asociados con las operaciones de producción y los aspectos de distribución de una compañoa en la produción de bienes o servicios.
+                                            Algunos de los modulos mas importantes de un ERP son INVENTARIO, FACTURACIÓN ELCTRONICA, PROVEEDORES, CATALOGOS (EMPLEADOS, CLIENTES), PUNTO DE VENTA, Etc. 
                                             </p>
                                         </div>
                                         <!-- //.panel-body -->
@@ -780,12 +781,12 @@
                                     <!-- //.panel-collapse -->
                                 </div>
                                 <!-- //.panel -->
-                            </div>
+                            </div>  
                             <!-- //.resume-item -->
 
                             <div class="resume-item">
                                 <div class="resume-year">
-                                    <span class="resume-year">2003 - 2005</span>
+                                    <span class="resume-year">CRM</span>
                                 </div>
                                 <!-- //.resume-year -->
 
@@ -797,7 +798,7 @@
                                 <div class="panel">
                                     <div class="panel-heading">
                                         <div class="panel-title">
-                                            <h4 class="resume-title">Graduation - College Name</h4>
+                                            <h4 class="resume-title">Sistema de Gestión Comercial y Relaciones</h4>
                                         </div>
                                         <!-- //.panel-title -->
                                     </div>
@@ -806,7 +807,7 @@
                                     <div id="education3" class="panel-collapse collapse">
                                         <div class="panel-body text-grey">
                                             <p>
-                                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
+                                                Estrategia de negocio enfocada al cliente en la cual el objetivo es reunir la mayor cantidad posible de información sobre sus clientes para generar relaciones a largo plazo, por medio de las herramientas de solucion empresarial se hace un analisis sobre la base de datos de los clientes y se maneja estadisticamente los prospectos potenciales para definir una relación, por medio de la mineria de datos se hace uso de su información para el beneficio corporativo asi como de los activos de la empresa. 
                                             </p>
                                         </div>
                                         <!-- //.panel-body -->
@@ -821,21 +822,20 @@
                     </div>
                     <!-- //.col-md-10 -->
                 </div>
-                <!-- //EDUCATION END -->
-            
-                <!-- WORK EXPERIENCE START -->
+                <!-- //EDUCATION END -->                
+                 <!-- WORK EXPERIENCE START -->
                 <div class="row work-experience">
                     <div class="col-md-10 col-md-offset-1">
                         <h3>
-                            Work Experience
+                            Tu mejor solución para una mejor acción
                             <br>
-                            2006 - Now
+                            DARP MÉXICO
                         </h3>
 
                         <div class="panel-group resume" id="work">
                             <div class="resume-item">
                                 <div class="resume-year">
-                                    <span class="resume-year">2013 - Now</span>
+                                    <span class="resume-year">NET - ADM</span>
                                 </div>
                                 <!-- //.resume-year -->
 
@@ -847,7 +847,7 @@
                                 <div class="panel">
                                     <div class="panel-heading">
                                         <div class="panel-title">
-                                            <h4 class="resume-title">Senior Designer - Galley La Company</h4>
+                                            <h4 class="resume-title">Administración de Redes</h4>
                                         </div>
                                         <!-- //.panel-title -->
                                     </div>
@@ -856,9 +856,7 @@
                                     <div id="work1" class="panel-collapse collapse in">
                                         <div class="panel-body text-grey">
                                             <p>
-                                                Responsibilities:
-                                                <br>
-                                                Design of print collateral and websites for various clients and markets, development of new and existing brands, 3D modeling of floor and site plans.
+                                                  DARP ofrece la gestión de la Red manejando la planificación, la organización, la supervisión y el control de los elementos del sistema para garantizar un adecuado nivel de servicio, nuestros objetivos principales de la gestión de la red consiste en mejorar la disponibilidad y el rendimiento de la red, asi como incrementar su efectividad haciendo uso de las mejores tecnologias en comunicaciones.
                                             </p>
                                         </div>
                                         <!-- //.panel-body -->
@@ -871,7 +869,7 @@
 
                             <div class="resume-item">
                                 <div class="resume-year">
-                                    <span class="resume-year">2010 - 2013</span>
+                                    <span class="resume-year">Virtual PC</span>
                                 </div>
                                 <!-- //.resume-year -->
 
@@ -883,7 +881,7 @@
                                 <div class="panel">
                                     <div class="panel-heading">
                                         <div class="panel-title">
-                                            <h4 class="resume-title">Graphic Designer - Company Name</h4>
+                                            <h4 class="resume-title">Virtualización de Sistemas</h4>
                                         </div>
                                         <!-- //.panel-title -->
                                     </div>
@@ -892,9 +890,7 @@
                                     <div id="work2" class="panel-collapse collapse">
                                         <div class="panel-body text-grey">
                                             <p>
-                                                Responsibilities:
-                                                <br>
-                                                Design of print collateral and trade show displays, redesign of company website and microsites, design and development of email blasts, development of brands for affiliate organizations.
+                                                DARP ocupa la tecnologia de la virtualización el cual oculta las caracteristicas fisicas de los recursos de procesamiento de información de manera que otros sistemas, aplicaciones o usuarios finales puedan interactuar con esos recursos creando un ambiente seguro para las aplicaciones y los datos ya que se mantnienen en un sitio centralizado, por lo que el acceso a los mismos puede ser facilmente monitoread y protegido mas fácilmente contra un posible robo o ataque.
                                             </p>
                                         </div>
                                         <!-- //.panel-body -->
@@ -907,7 +903,7 @@
 
                             <div class="resume-item">
                                 <div class="resume-year">
-                                    <span class="resume-year">2007 - 2010</span>
+                                    <span class="resume-year">PM</span>
                                 </div>
                                 <!-- //.resume-year -->
 
@@ -919,7 +915,7 @@
                                 <div class="panel">
                                     <div class="panel-heading">
                                         <div class="panel-title">
-                                            <h4 class="resume-title">IT Specialist - Company Name</h4>
+                                            <h4 class="resume-title">Project Management</h4>
                                         </div>
                                         <!-- //.panel-title -->
                                     </div>
@@ -939,44 +935,6 @@
                                 </div>
                                 <!-- //.panel -->
                             </div>
-                            <!-- //.resume-item -->
-
-                            <div class="resume-item">
-                                <div class="resume-year">
-                                    <span class="resume-year">2006 - 2007</span>
-                                </div>
-                                <!-- //.resume-year -->
-
-                                <div class="resume-btn">
-                                    <a href="#work4" class="collapsed" data-toggle="collapse" data-parent="#work"></a>
-                                </div>
-                                <!-- //.resume-btn -->
-
-                                <div class="panel">
-                                    <div class="panel-heading">
-                                        <div class="panel-title">
-                                            <h4 class="resume-title">Graphic Designer Intern - Company Name</h4>
-                                        </div>
-                                        <!-- //.panel-title -->
-                                    </div>
-                                    <!-- //.panel-heading -->
-
-                                    <div id="work4" class="panel-collapse collapse">
-                                        <div class="panel-body text-grey">
-                                            <p>
-                                                Responsibilities:
-                                                <br>
-                                                Redesign of brand guidelines and standards microsite, design of departmental logo lock-ups, photography of products for marketing collateral, design of corporate Twitter layout.
-                                            </p>
-                                        </div>
-                                        <!-- //.panel-body -->
-                                    </div>
-                                    <!-- //.panel-collapse -->
-                                </div>
-                                <!-- //.panel -->
-                            </div>
-                            <!-- //.resume-item -->
-                        </div>
                         <!-- //.panel-group -->
                     </div>
                     <!-- //.col-md-10 -->
